--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lukso-biding-system",
   "version": "0.1.0",
-  "homepage": "https://spencermeta.github.io/lukso-biding-system",
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
